    failures due to old kernel now that all buildds run jessie.
  * debhelper.in/locales-all.prerm: do not specify a path to check for
    locale-gen.
  * libc6.1.symbols.alpha: remove invoke_dynamic_linker from libpcprofile.so.
    It has disappeared, but it is a private library.
  * Remove debver2localesdep.pl, it is unused since 2.19-16.

  [ Steven Chamberlain ]
  * sysdeps/kfreebsd.mk: find kfreebsd-kernel-headers in multiarch path.
    Closes: #672774, #798064.

  [ Helmut Grohne ]
  * Fix some issues with stage 1.  Closes: #797831.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 29 Aug 2015 00:43:44 +0200

glibc (2.21-0experimental1) experimental; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-libpthread.diff: Update from upstream.
  * patches/hurd-i386/cvs-libpthread-dlopen.diff: Merged.
  * patches/hurd-i386/cvs-libpthread-libc-lockP2.diff: Merged.
  * patches/hurd-i386/cvs-bind_umask.diff: Merged.
  * patches/hurd-i386/cvs-fork_ss_hang.diff: Merged.
  * patches/hurd-i386/cvs-munmap-0.diff: Merged.
  * patches/hurd-i386/cvs-static-dlopen.diff: Merged.
  * patches/hurd-i386/cvs-tcbhead_t.diff: Merged.
  * patches/hurd-i386/cvs-libpthread_versions.diff: Rebased.
  * patches/hurd-i386/local-disable-tst-xmmymm.diff: Dropped.
  * patches/hurd-i386/local-hurdsig-global-dispositions-version.diff: Rebased.
  * patches/hurd-i386/submitted-exec_filename.diff: Rebased.
  * patches/hurd-i386/submitted-net.diff: Rebased.
  * patches/hurd-i386/tg-EIEIO-fr.diff: Rebased.
  * patches/hurd-i386/tg-af_local_strlen.diff: Rebased.
  * patches/hurd-i386/tg-chflags.diff: Rebased.
  * patches/hurd-i386/tg-tls-threadvar.diff: Update.
  * patches/hurd-i386/tg-tls.diff: Rebased.
  * patches/hurd-i386/tg-tls_thread_leak.diff: Rebased.
  * patches/hurd-i386/unsubmitted-NO_HIDDEN.diff: Rebased.
  * patches/hurd-i386/tg-no-hp-timing.diff: Update.
  * patches/series: Re-enable all hurd patches.
  * patches/hurd-i386/libpthread-versions.diff: New patch, updates to new