@@ -32,10 +32,6 @@ build-tree := build-tree
 stamp := $(CURDIR)/stamp-dir/
 DUMMY := $(shell mkdir -p $(stamp))
 
-# The minimum package version with which these packages are compatible.
-include debian/shlibver
-shlib_dep = $(libc) (>= $(shlib_dep_ver))
-
 # Beyond here you shouldn't need to customise anything:
 export SHELL          = /bin/bash -e
 
@@ -57,6 +53,9 @@ DEB_SOURCE_PACKAGE := $(strip $(shell egrep '^Source: ' debian/control | cut -f 
 
 DEB_VERSION := $(shell dpkg-parsechangelog | egrep '^Version:' | cut -f 2 -d ' ')
 GLIBC_VERSION = $(shell echo $(DEB_VERSION) | sed -e 's/.*://' -e 's/-.*//')
+
+# The minimum package version with which these packages are compatible.
+shlib_dep = $(libc) (>= $(GLIBC_VERSION))
 
 DEB_BUILDDIR ?= $(build-tree)/$(DEB_HOST_ARCH)-$(curpass)
 
