@@ -1,1 +1,0 @@
-shlib_dep_ver = 2.21
