@@ -32,6 +32,8 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
   * libc6.1.symbols.alpha: remove invoke_dynamic_linker from libpcprofile.so.
     It has disappeared, but it is a private library.
   * Remove debver2localesdep.pl, it is unused since 2.19-16.
+  * Use $(GLIBC_VERSION) for shlib, instead of defining the version in a 
+    separate shlibver file.
 
   [ Steven Chamberlain ]
   * sysdeps/kfreebsd.mk: find kfreebsd-kernel-headers in multiarch path.
